Vision/Source/Atmcd32d.h

EXPNETTYPE unsigned int WINAPI AbortAcquisition(void);
EXPNETTYPE unsigned int WINAPI CoolerOFF(void);
EXPNETTYPE unsigned int WINAPI CoolerON(void);
EXPNETTYPE unsigned int WINAPI GetAcquiredData(long * array, unsigned long size);
EXPNETTYPE unsigned int WINAPI GetAcquisitionTimings(float* exposure, float* accumulate, float* kinetic);
EXPNETTYPE unsigned int WINAPI GetDetector(int* xpixels, int* ypixels);
EXPNETTYPE unsigned int WINAPI GetFilterMode(int* mode);
EXPNETTYPE unsigned int WINAPI GetFKExposureTime(float* time);
EXPNETTYPE unsigned int WINAPI GetFKVShiftSpeed(int index, int* speed);
EXPNETTYPE unsigned int WINAPI GetHardwareVersion(unsigned int* PCB, unsigned int* Decode, unsigned int* SerPar, unsigned int* Clocks, unsigned int* dummy1, unsigned int* dummy2);
EXPNETTYPE unsigned int WINAPI GetHorizontalSpeed(int index, int* speed);
EXPNETTYPE unsigned int WINAPI GetNumberFKVShiftSpeeds(int* number);
EXPNETTYPE unsigned int WINAPI GetNumberHorizontalSpeeds(int* number);
EXPNETTYPE unsigned int WINAPI GetNumberVerticalSpeeds(int* number);
EXPNETTYPE unsigned int WINAPI GetSoftwareVersion(unsigned int* eprom, unsigned int* coffile, unsigned int* vxdrev, unsigned int* vxdver, unsigned int* dllrev, unsigned int* dllver);
EXPNETTYPE unsigned int WINAPI GetStatus(int* status);
EXPNETTYPE unsigned int WINAPI GetTemperature(int* temperature);
EXPNETTYPE unsigned int WINAPI GetTemperatureRange(int* mintemp,int* maxtemp);
EXPNETTYPE unsigned int WINAPI GetVerticalSpeed(int index, int* speed);
EXPNETTYPE unsigned int WINAPI GPIBReceive(int id, short address, char* text, int size);
EXPNETTYPE unsigned int WINAPI GPIBSend(int id, short address, char* text);
EXPNETTYPE unsigned int WINAPI I2CBurstRead(BYTE i2cAddress, long nBytes, BYTE* data);
EXPNETTYPE unsigned int WINAPI I2CBurstWrite(BYTE i2cAddress, long nBytes, BYTE* data);
EXPNETTYPE unsigned int WINAPI I2CRead(BYTE deviceID, BYTE intAddress, BYTE* pdata);
EXPNETTYPE unsigned int WINAPI I2CReset(void);
EXPNETTYPE unsigned int WINAPI I2CWrite(BYTE deviceID, BYTE intAddress, BYTE data);
EXPNETTYPE unsigned int WINAPI InAuxPort(int port, int* state);
EXPNETTYPE unsigned int WINAPI Initialize(char * dir);	 //	read ini file to get head and card
EXPNETTYPE unsigned int WINAPI OutAuxPort(int port, int state);
EXPNETTYPE unsigned int WINAPI SaveAsSif(char* path);
EXPNETTYPE unsigned int WINAPI SetAccumulationCycleTime(float time);
EXPNETTYPE unsigned int WINAPI SetAcquisitionMode(int mode);
EXPNETTYPE unsigned int WINAPI SetComplexImage(int numAreas, int* areas);
EXPNETTYPE unsigned int WINAPI SetExposureTime(float time);
EXPNETTYPE unsigned int WINAPI SetFastKinetics(int exposedRows, int seriesLength, float time, int mode, int hbin, int vbin);
EXPNETTYPE unsigned int WINAPI SetFilterMode(int mode);
EXPNETTYPE unsigned int WINAPI SetFilterParameters(int width, float sensitivity, int range, float accept, int smooth, int noise);
EXPNETTYPE unsigned int WINAPI SetFKVShiftSpeed(int index);
EXPNETTYPE unsigned int WINAPI SetFullImage(int hbin, int vbin);
EXPNETTYPE unsigned int WINAPI SetGain(int gain);
EXPNETTYPE unsigned int WINAPI SetGateMode(int gatemode);
EXPNETTYPE unsigned int WINAPI SetHorizontalSpeed(int index);
EXPNETTYPE unsigned int WINAPI SetImage(int hbin, int vbin, int hstart, int hend, int vstart, int vend);
EXPNETTYPE unsigned int WINAPI SetKineticCycleTime(float time);
EXPNETTYPE unsigned int WINAPI SetMCPGating(int gating);
EXPNETTYPE unsigned int WINAPI SetMultiTrack(int number, int height, int offset,int* bottom,int* gap);
EXPNETTYPE unsigned int WINAPI SetNumberAccumulations(int number);
EXPNETTYPE unsigned int WINAPI SetNumberKinetics(int number);
EXPNETTYPE unsigned int WINAPI SetRandomTracks(int numTracks, int* areas);
EXPNETTYPE unsigned int WINAPI SetReadMode(int mode);
EXPNETTYPE unsigned int WINAPI SetShutter(int type, int mode, int closingtime, int openingtime);
EXPNETTYPE unsigned int WINAPI SetSingleTrack(int centre, int height);
EXPNETTYPE unsigned int WINAPI SetTemperature(int temperature);
EXPNETTYPE unsigned int WINAPI SetTriggerMode(int mode);
EXPNETTYPE unsigned int WINAPI SetVerticalSpeed(int index);
EXPNETTYPE unsigned int WINAPI ShutDown(void);
EXPNETTYPE unsigned int WINAPI StartAcquisition(void);
#define DRV_ERROR_CODES	20001
#define DRV_SUCCESS	20002
#define DRV_VXDNOTINSTALLED	20003
#define DRV_ERROR_SCAN	20004
#define DRV_ERROR_CHECK_SUM	20005
#define DRV_ERROR_FILELOAD	20006
#define DRV_UNKNOWN_FUNCTION	20007
#define DRV_ERROR_VXD_INIT	20008
#define DRV_ERROR_ADDRESS	20009
#define DRV_ERROR_PAGELOCK	20010
#define DRV_ERROR_PAGEUNLOCK	20011
#define DRV_ERROR_BOARDTEST	20012
#define DRV_ERROR_ACK	20013
#define DRV_ERROR_UP_FIFO	20014
#define DRV_ERROR_PATTERN	20015
#define DRV_ACQUISITION_ERRORS	20017
#define DRV_ACQ_BUFFER	20018
#define DRV_ACQ_DOWNFIFO_FULL	20019
#define DRV_PROC_UNKONWN_INSTRUCTION	20020
#define DRV_ILLEGAL_OP_CODE	20021
#define DRV_KINETIC_TIME_NOT_MET	20022
#define DRV_ACCUM_TIME_NOT_MET	20023
#define DRV_TEMPERATURE_CODES	20033
#define DRV_TEMPERATURE_OFF	20034
#define DRV_TEMPERATURE_NOT_STABILIZED	20035
#define DRV_TEMPERATURE_STABILIZED	20036
#define DRV_TEMPERATURE_NOT_REACHED	20037
#define DRV_TEMPERATURE_OUT_RANGE	20038
#define DRV_TEMPERATURE_NOT_SUPPORTED	20039
#define DRV_TEMPERATURE_DRIFT	20040
#define DRV_GENERAL_ERRORS	20049
#define DRV_INVALID_AUX	20050
#define DRV_COF_NOTLOADED	20051
#define DRV_FPGAPROG 20052
#define DRV_FLEXERROR 20053
#define DRV_DRIVER_ERRORS	20065
#define DRV_P1INVALID	20066
#define DRV_P2INVALID	20067
#define DRV_P3INVALID	20068
#define DRV_P4INVALID	20069
#define DRV_INIERROR	20070
#define DRV_COFERROR	20071
#define DRV_ACQUIRING	20072
#define DRV_IDLE	20073
#define DRV_TEMPCYCLE	20074
#define DRV_NOT_INITIALIZED 20075
#define DRV_P5INVALID	20076
#define DRV_P6INVALID	20077
#define DRV_INVALID_MODE	20078
#define DRV_INVALID_FILTER 20079
#define DRV_I2CERRORS	20080
#define DRV_I2CDEVNOTFOUND	20081
#define DRV_I2CTIMEOUT	20082